minor gui fix - button vertical align text

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -86,11 +86,11 @@ input, button, submit {
 }
 
 .btn__large {
+  line-height: 55px;
   width: 100%;
   height: 60px;
   font-size : 22px;
-  padding-top : 13px;
-  padding-bottom : 18px;
+  // padding-bottom : 18px;
 }
 
 .btn__primary {
